--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
+  <main class="section">
+
+  </main>
   <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
