Finished round 1 of html and css

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,24 @@
 </head>
 <body>
   <main class="section">
-
+    <div class="container">
+      <div class="user">   <!--not sure if this is one too many levels -->
+        <div class="user-box">
+          <div class="user-box__top">
+            <p class="back">Arrow</p>
+            <p class="image-box"><img src="#" alt="" class="user-image"></p>   <!--not sure best way to center pic without centering arrow -->
+          </div>
+          <div class="user-box__bottom">
+            <ul class="user-data">
+              <li class="user-data__item"><span class="icon name">#</span>Lorem ipsum dolor sit amet.</li>
+              <li class="user-data__item"><span class="icon email">#</span>Lorem ipsum dolor sit amet.</li>
+              <li class="user-data__item"><span class="icon phone">#</span>Lorem ipsum dolor sit amet.</li>
+              <li class="user-data__item"><span class="icon location">#</span>Lorem ipsum dolor sit amet.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="/app.js" charset="utf-8"></script>
 </body>
